--- a/ApplicationClass/ApplicationClass.csproj
+++ b/ApplicationClass/ApplicationClass.csproj
@@ -42,7 +42,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbstractLecturer.cs" />
-    <Compile Include="Class1.cs" />
     <Compile Include="Course.cs" />
     <Compile Include="Lecturer.cs" />
     <Compile Include="MainController.cs" />
@@ -52,6 +51,11 @@
     <Compile Include="Student.cs" />
     <Compile Include="TemporaryLecturer.cs" />
     <Compile Include="User.cs" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Data\Scripts\001.sql" />
+    <Content Include="Data\Scripts\002.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
